/* ************************************************************************** */
/*                                                                            */
/*                                                        :::      ::::::::   */
/*   Server.hpp                                         :+:      :+:    :+:   */
/*                                                    +:+ +:+         +:+     */
/*   By: frbranda <frbranda@student.42porto.com>    +#+  +:+       +#+        */
/*                                                +#+#+#+#+#+   +#+           */
/*   Created: 2026/01/23 15:37:03 by frbranda          #+#    #+#             */
/*   Updated: 2026/02/26 14:11:25 by frbranda         ###   ########.fr       */
/*                                                                            */
/* ************************************************************************** */

#ifndef SERVER_HPP
#define SERVER_HPP

#include "Utils.hpp"
#include "Client.hpp"
#include "Channel.hpp"

class Client;
class Channel;


class Server
{
	private:
		typedef std::map<int, Client*>::iterator clientIt;

		// Socket _serverSocked(); TODO maybe since server and clients will have their own socket
		int _fd; // serverFd
		int _epfd; // epoll Fd
		int _port;
		//std::string _password;
		
		std::map<int, Client*> _clients;
		//std::map<string, Channels*> _channels;

		// ── I/O helpers ──
			void createAndBindSocket();
			void setNonBlocking(int fd);
			void epollCreate (int flags);
			void epollAdd (int fd, uint32_t events);
			void epollMod (int fd, uint32_t events);
			void epollDel (int fd);

		// ── Event handlers ──
			void handleNewConnection();
			void handleClientMessage(int clientFd);
			void removeClient(int clientFd);


		// TODO IRC logic (Parsing)
			// void processMessage(int fd, const std::string& msg);
		
	public:
		Server(int port);
		~Server();

		void initServer();
		void run();
		void cleanup();

		// TODO CLient management
		Client* getClient(int clientFd);
		// TODO Channel management
};

#endif